# backref

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
share/man/man1/: Makefile.am  backref.1
src/: .gitignore  Makefile.am  backref.c  backref.h  decode.c  decode.h  defs.h  encode.c  encode.h  lookup.c  lookup.h  main.c
